{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 33,
  "lineage": "aa347ca6-5df0-5c2b-27f8-31e967a7b48e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "Jenkins-master",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-045a8ab02aadf4f88",
            "arn": "arn:aws:ec2:eu-west-3:992382798594:instance/i-0423c6810db2cbf76",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0423c6810db2cbf76",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Workshop",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02cde66f8387418d0",
            "private_dns": "ip-10-1-1-28.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.28",
            "public_ip": "35.180.44.4",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e0723fcef26fb74c",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0478147db2c430f9f",
            "tags": {
              "Name": "Jenkins-master"
            },
            "tags_all": {
              "Name": "Jenkins-master"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cc599a2dd51efc24"
            ]
          },
          "dependencies": [
            "aws_security_group.security_groupe",
            "aws_subnet.workshop-public_subent_01",
            "aws_vpc.workshop-vpc"
          ]
        },
        {
          "index_key": "ansible",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-045a8ab02aadf4f88",
            "arn": "arn:aws:ec2:eu-west-3:992382798594:instance/i-087a70aa772cf1921",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-087a70aa772cf1921",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Workshop",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08f87b4001630f7fa",
            "private_dns": "ip-10-1-1-115.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.115",
            "public_ip": "15.188.90.18",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-039728a920d2cd424",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0478147db2c430f9f",
            "tags": {
              "Name": "ansible"
            },
            "tags_all": {
              "Name": "ansible"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cc599a2dd51efc24"
            ]
          },
          "dependencies": [
            "aws_security_group.security_groupe",
            "aws_subnet.workshop-public_subent_01",
            "aws_vpc.workshop-vpc"
          ]
        },
        {
          "index_key": "build-slave",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-045a8ab02aadf4f88",
            "arn": "arn:aws:ec2:eu-west-3:992382798594:instance/i-08e4848a9e4c0797a",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08e4848a9e4c0797a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Workshop",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e5553e933626289f",
            "private_dns": "ip-10-1-1-207.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.207",
            "public_ip": "35.181.7.103",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-086735bc5fc6c3ec7",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0478147db2c430f9f",
            "tags": {
              "Name": "build-slave"
            },
            "tags_all": {
              "Name": "build-slave"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cc599a2dd51efc24"
            ]
          },
          "dependencies": [
            "aws_security_group.security_groupe",
            "aws_subnet.workshop-public_subent_01",
            "aws_vpc.workshop-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "workshop-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:992382798594:internet-gateway/igw-031d3b24aef2b50ef",
            "id": "igw-031d3b24aef2b50ef",
            "owner_id": "992382798594",
            "tags": {
              "Name": "workshop-igw"
            },
            "tags_all": {
              "Name": "workshop-igw"
            },
            "vpc_id": "vpc-0aebc97291ff5b68c"
          },
          "dependencies": [
            "aws_vpc.workshop-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "workshop-public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:992382798594:route-table/rtb-046be22aa8cb5faf1",
            "id": "rtb-046be22aa8cb5faf1",
            "owner_id": "992382798594",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-031d3b24aef2b50ef",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "workshop-public-rt"
            },
            "tags_all": {
              "Name": "workshop-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aebc97291ff5b68c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.workshop-igw",
            "aws_vpc.workshop-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "workshop-rta-public-subent-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09b7d11844f9a5f58",
            "route_table_id": "rtb-046be22aa8cb5faf1",
            "subnet_id": "subnet-0478147db2c430f9f"
          },
          "dependencies": [
            "aws_internet_gateway.workshop-igw",
            "aws_route_table.workshop-public-rt",
            "aws_subnet.workshop-public_subent_01",
            "aws_vpc.workshop-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "workshop-rta-public-subent-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b559b90ba033cab5",
            "route_table_id": "rtb-046be22aa8cb5faf1",
            "subnet_id": "subnet-03372484072f4ab25"
          },
          "dependencies": [
            "aws_internet_gateway.workshop-igw",
            "aws_route_table.workshop-public-rt",
            "aws_subnet.workshop-public_subent_02",
            "aws_vpc.workshop-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_groupe",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:992382798594:security-group/sg-0cc599a2dd51efc24",
            "description": "SSH Access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cc599a2dd51efc24",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "security_groupe",
            "name_prefix": "",
            "owner_id": "992382798594",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh-port"
            },
            "tags_all": {
              "Name": "ssh-port"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aebc97291ff5b68c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.workshop-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "workshop-public_subent_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:992382798594:subnet/subnet-0478147db2c430f9f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0478147db2c430f9f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "992382798594",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "workshop-public_subent_01"
            },
            "tags_all": {
              "Name": "workshop-public_subent_01"
            },
            "vpc_id": "vpc-0aebc97291ff5b68c"
          },
          "dependencies": [
            "aws_vpc.workshop-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "workshop-public_subent_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:992382798594:subnet/subnet-03372484072f4ab25",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03372484072f4ab25",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "992382798594",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "workshop-public_subent_02"
            },
            "tags_all": {
              "Name": "workshop-public_subent_02"
            },
            "vpc_id": "vpc-0aebc97291ff5b68c"
          },
          "dependencies": [
            "aws_vpc.workshop-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "workshop-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:992382798594:vpc/vpc-0aebc97291ff5b68c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0728531c88f2d7f37",
            "default_route_table_id": "rtb-0c13b5a67459f9e3e",
            "default_security_group_id": "sg-0720abe95f6a5c9d2",
            "dhcp_options_id": "dopt-0617b7b54d11f546c",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0aebc97291ff5b68c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c13b5a67459f9e3e",
            "owner_id": "992382798594",
            "tags": {
              "Name": "workshop-vpc"
            },
            "tags_all": {
              "Name": "workshop-vpc"
            }
          }
        }
      ]
    }
  ]
}